--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Bbr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,30 +11,40 @@
         <h1>Perfil</h1>
         <p>Sou uma desenvolvedora web criativa.</p>
     </header>
-    <section class="one">
-        <img src="./images/WhatsApp Image 2026-02-12 at 05.51.13.jpeg" alt="Foto de perfil">
-        <h1>Olá, eu sou a Laura!</h1>
-        <p>Sou uma desenvolvedora web criativa, apaixonada por transformar ideias em realidade digital. Com habilidades em HTML, CSS e JavaScript, estou sempre buscando aprender novas tecnologias para criar experiências online incríveis. Adoro colaborar em projetos desafiadores e estou animada para contribuir com minha paixão pela programação e design.</p>
-    </section>
-    <section class="two">
-        <h2>Sobre mim:</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente molestiae nesciunt id saepe nobis! Perferendis a maiores vel possimus tenetur enim, soluta amet! Quae eveniet sapiente at suscipit corporis a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem porro eius sunt perspiciatis nostrum quos non. Voluptatibus tenetur iste quae adipisci in, ratione libero dolor exercitationem minima. Dicta, voluptatibus tempore.</p>
-        <button>
-            <p>contate-me</p>
-        </button>
-    </section>
-    <section class="three">
-        <h2>Detalhes</h2>
-        <ul>Nome:
-            <li>Laura Nizolli</li>
-        </ul>
-        <ul>Idade
-            <li>16 anos</li>
-        </ul>
-        <ul>Local
-            <li>Bragança Paulista, São Paulo, Brasil</li>
-        </ul>
-    </section>
+    <main>
+        <div class="bg">
+            <section class="one">
+                <img src="./images/WhatsApp Image 2026-02-12 at 05.51.13.jpeg" alt="Foto de perfil" class="ftperfil">
+                <h2>Olá, eu sou a Laura!</h2>
+                <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quae similique praesentium deleniti ad quidem, doloremque aliquam vitae minus dignissimos. Dolorem, rem. Repellat, voluptate quia dolorem vel quos eaque nobis.</p>
+            </section>
+            <div class="iconcontainer">
+                <img src="./images/instagram.png" alt="" class="icon">
+                <img src="./images/whatsapp.png" alt="" class="icon">
+                <img src="./images/mail.png" alt="" class="icon">
+            </div>
+        </div>
+        <section class="two">
+            <h2>Sobre mim:</h2>
+            <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente molestiae nesciunt id saepe nobis! Perferendis a maiores vel possimus tenetur enim, soluta amet! Quae eveniet sapiente at suscipit corporis a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem porro eius sunt perspiciatis nostrum quos non. Voluptatibus tenetur iste quae adipisci in, ratione libero dolor exercitationem minima. Dicta, voluptatibus tempore.</p>
+            <button>
+                <p>contate-me</p>
+            </button>
+        </section>
+        <section class="three">
+            <h2>Detalhes</h2>
+            <ul>Nome:
+             <li>Laura Nizolli</li>
+            </ul>
+            <ul>Idade
+                <li>16 anos</li>
+            </ul>
+            <ul>Local
+                <li>Bragança Paulista, São Paulo, Brasil</li>
+            </ul>
+        </section>  
+    </main>
+    
     <footer>
         <p>Copyright © 2024 Laura Nizolli. Todos os direitos reservados.</p>
     </footer>
