--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
         <h1>Perfil</h1>
         <p>Sou uma desenvolvedora web criativa.</p>
     </header>
-    <section>
+    <section class="one">
+        <img src="./images/WhatsApp Image 2026-02-12 at 05.51.13.jpeg" alt="Foto de perfil">
         <h1>Olá, eu sou a Laura!</h1>
         <p>Sou uma desenvolvedora web criativa, apaixonada por transformar ideias em realidade digital. Com habilidades em HTML, CSS e JavaScript, estou sempre buscando aprender novas tecnologias para criar experiências online incríveis. Adoro colaborar em projetos desafiadores e estou animada para contribuir com minha paixão pela programação e design.</p>
     </section>
-    <section>
+    <section class="two">
         <h2>Sobre mim:</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente molestiae nesciunt id saepe nobis! Perferendis a maiores vel possimus tenetur enim, soluta amet! Quae eveniet sapiente at suscipit corporis a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem porro eius sunt perspiciatis nostrum quos non. Voluptatibus tenetur iste quae adipisci in, ratione libero dolor exercitationem minima. Dicta, voluptatibus tempore.</p>
         <button>
             <p>contate-me</p>
         </button>
     </section>
-    <section>
+    <section class="three">
         <h2>Detalhes</h2>
         <ul>Nome:
             <li>Laura Nizolli</li>
